--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -27,7 +27,7 @@ jobs:
             echo "✅ Existing .secrets.baseline file detected. No new baseline file will be created."
           fi
 
-      - uses: BankingSystemSantiagoVargas/workflow-Pruebas@v2
+      - uses: actions/checkout@v2
         with:
           secrets: ${{ toJSON(secrets) }}
       - name: Scan repository for secrets
